src/main/resources/cloudformation/vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: FormKiQ - VPC
    
Parameters:

  EnableNatGateway:
    Description: Enable a NAT Gateway for private subnets outbound internet access (requires public subnets)
    Default: "false"
    Type: String
    AllowedValues: ["false", "true"]

  EnableNetworkAcls:
    Description: Enable a custom network ACL for all subnets that allows VPC-internal ingress, HTTP/HTTPS ingress, TCP ephemeral return traffic, all outbound traffic, and denies unrestricted SSH/RDP ingress
    Default: "true"
    Type: String
    AllowedValues: ["false", "true"]

  VpcLabel:
    Type: String
    Description: A Label for the VPC
    AllowedPattern: ".+"
    Default: "formkiq"
    
  VpcCidr:
    Type: String
    Description: VPC CIDR block
    AllowedPattern: "^[0-9./\\s]*"
    Default: 10.1.0.0/16

  PublicSubnet1Cidr:
    Type: String
    Description: Public Subnet1 CIDR block (optional leave empty to skip)
    Default: 10.1.1.0/24
    
  PublicSubnet2Cidr:
    Type: String
    Description: Public Subnet2 CIDR block (optional leave empty to skip)
    Default: 10.1.2.0/24

  PublicSubnet3Cidr:
    Type: String
    Description: Public Subnet3 CIDR block (optional leave empty to skip)
    Default: 10.1.3.0/24

  PrivateSubnet1Cidr:
    Type: String
    Description: Private Subnet1 CIDR block
    AllowedPattern: "^[0-9./\\s]*"
    Default: 10.1.10.0/24

  PrivateSubnet2Cidr:
    Type: String
    Description: Private Subnet2 CIDR block
    AllowedPattern: "^[0-9./\\s]*"
    Default: 10.1.20.0/24
    
  PrivateSubnet3Cidr:
    Type: String
    Description: Public Subnet3 CIDR block
    AllowedPattern: "^[0-9./\\s]*"
    Default: 10.1.30.0/24

  EnableVpcEndpoints:
    Description: Enable VPC Endpoints (S3, Dynamodb, SNS, SMS, Execute-Api) set to 'true' if using Opensearch
    Default: "false"
    Type: String
    AllowedValues: ["false", "true"]

  EnableVpcLinks:
    Description: Enable VPC Links (needed for Typesense)
    Default: "false"
    Type: String
    AllowedValues: ["false", "true"]

  EnableVpcFlowLogs:
    Description: Enable VPC Flow Logs (set to 'true' to enable)
    Type: String
    Default: "false"
    AllowedValues: ["false", "true"]

  VpcFlowLogsDestination:
    Description: "Destination for VPC Flow Logs. Options: s3, cloud-watch-logs"
    Type: String
    Default: "s3"
    AllowedValues: ["s3", "cloud-watch-logs"]

  FlowLogsRetentionInDays:
    Description: "Retention period in days for CloudWatch Logs. Allowed values: 1,3,5,7,14,30,60,90,120,150,180,365,400,545,731,1827,3653"
    Type: Number
    Default: 30
    AllowedValues: [1, 3, 5, 7, 14, 30, 60, 90, 120, 150, 180, 365, 400, 545, 731, 1827, 3653]

Conditions:

  IsEnableNatGateway:
    Fn::Equals:
      - Ref: EnableNatGateway
      - "true"

  CreateNatGateway:
    Fn::And:
      - Condition: HasPublic
      - Condition: IsEnableNatGateway

  IsEnableNetworkAcls:
    Fn::Equals:
      - Ref: EnableNetworkAcls
      - "true"

  CreatePublicNetworkAcls:
    Fn::And:
      - Condition: HasPublic
      - Condition: IsEnableNetworkAcls

  HasPublic:
    Fn::And:
      - Fn::Not:
          - Fn::Equals: [ !Ref PublicSubnet1Cidr, "" ]
      - Fn::Not:
          - Fn::Equals: [ !Ref PublicSubnet2Cidr, "" ]
      - Fn::Not:
          - Fn::Equals: [ !Ref PublicSubnet3Cidr, "" ]

  IsEnableVpcFlowLogs:
    Fn::Equals:
      - Ref: EnableVpcFlowLogs
      - "true"

  IsFlowLogToS3:
    Fn::Equals: [ !Ref VpcFlowLogsDestination, "s3" ]
  
  IsFlowLogToCloudWatch:
    Fn::Equals: [ !Ref VpcFlowLogsDestination, "cloud-watch-logs" ]

  IsFlowLogToS3AndEnabled:
    Fn::And:
      - Condition: IsEnableVpcFlowLogs
      - Condition: IsFlowLogToS3

  IsFlowLogToCloudWatchAndEnabled:
    Fn::And:
      - Condition: IsEnableVpcFlowLogs
      - Condition: IsFlowLogToCloudWatch

  IsEnableVpcEndpoints:
    Fn::Equals:
    - Ref: EnableVpcEndpoints
    - 'true'

  IsEnableVpcLinks:
    Fn::Equals:
      - Ref: EnableVpcLinks
      - 'true'

  IsCaCentral1:
    Fn::Equals:
      - Ref: AWS::Region
      - 'ca-central-1'

Resources:

  InternetGateway:
    Condition: HasPublic
    Type: AWS::EC2::InternetGateway

  GatewayToInternet:
    Condition: HasPublic
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc
      InternetGatewayId:
        Ref: InternetGateway
      
  CloudMapNamespace:
    Condition: IsEnableVpcLinks
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Vpc:
        Ref: Vpc
      Name: 
        Ref: VpcLabel

  VpcLink:
    Condition: IsEnableVpcLinks
    Type: AWS::ApiGatewayV2::VpcLink
    Properties:
      Name: vpclink
      SecurityGroupIds:
        - Ref: VpcLinkSecurityGroup
      SubnetIds:
        Fn::If:
          - IsCaCentral1
          - - Ref: PrivateSubnet1
            - Ref: PrivateSubnet2
          - - Ref: PrivateSubnet1
            - Ref: PrivateSubnet2
            - Ref: PrivateSubnet3

  VpcLinkSecurityGroup:
    Condition: IsEnableVpcLinks
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: FormKiQ VPC Link
      VpcId: 
        Ref: Vpc
      SecurityGroupIngress: []
        
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: 
            Ref: VpcLabel
        - Key: Application
          Value: FormKiQ

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Condition: HasPublic
    Properties:
      VpcId:
        Ref: Vpc
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs:
              Ref: 'AWS::Region'
      CidrBlock:
        Ref: PublicSubnet1Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: 
            Fn::Sub: "FormKiQ PublicSubnet1 (${PublicSubnet1Cidr})"
        - Key: Application
          Value: FormKiQ
 
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Condition: HasPublic
    Properties:
      VpcId:
        Ref: Vpc
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs:
              Ref: 'AWS::Region'
      CidrBlock:
        Ref: PublicSubnet2Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: 
            Fn::Sub: "FormKiQ PublicSubnet2 (${PublicSubnet2Cidr})"
        - Key: Application
          Value: FormKiQ

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs:
              Ref: 'AWS::Region'
      CidrBlock:
        Ref: PublicSubnet3Cidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: 
            Fn::Sub: "FormKiQ PublicSubnet3 (${PublicSubnet3Cidr})"
        - Key: Application
          Value: FormKiQ
            
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
        Ref: Vpc
      CidrBlock:
        Ref: PrivateSubnet1Cidr
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs:
              Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: 
            Fn::Sub: "FormKiQ PrivateSubnet1 (${PrivateSubnet1Cidr})"
        - Key: Application
          Value: FormKiQ
            
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
        Ref: Vpc
      CidrBlock:
        Ref: PrivateSubnet2Cidr
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs:
              Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: 
            Fn::Sub: "FormKiQ PrivateSubnet2 (${PrivateSubnet2Cidr})"
        - Key: Application
          Value: FormKiQ
            
  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
        Ref: Vpc
      CidrBlock:
        Ref: PrivateSubnet3Cidr
      AvailabilityZone:
        Fn::Select:
          - 2
          - Fn::GetAZs:
              Ref: 'AWS::Region'
      Tags:
        - Key: Name
          Value: 
            Fn::Sub: "FormKiQ PrivateSubnet3 (${PrivateSubnet3Cidr})"
        - Key: Application
          Value: FormKiQ

  NetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Condition: IsEnableNetworkAcls
    Properties:
      VpcId:
        Ref: Vpc
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${VpcLabel} NACL"
        - Key: Application
          Value: FormKiQ

  NetworkAclAllowVpcInbound:
    Type: AWS::EC2::NetworkAclEntry
    Condition: IsEnableNetworkAcls
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 90
      Protocol: -1
      RuleAction: allow
      Egress: false
      CidrBlock:
        Ref: VpcCidr

  NetworkAclDenySshInbound:
    Type: AWS::EC2::NetworkAclEntry
    Condition: IsEnableNetworkAcls
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 100
      Protocol: 6
      RuleAction: deny
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 22
        To: 22

  NetworkAclDenyRdpInbound:
    Type: AWS::EC2::NetworkAclEntry
    Condition: IsEnableNetworkAcls
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 110
      Protocol: 6
      RuleAction: deny
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 3389
        To: 3389

  NetworkAclAllowHttpInbound:
    Type: AWS::EC2::NetworkAclEntry
    Condition: IsEnableNetworkAcls
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 120
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80

  NetworkAclAllowHttpsInbound:
    Type: AWS::EC2::NetworkAclEntry
    Condition: IsEnableNetworkAcls
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 130
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 443
        To: 443

  NetworkAclAllowLowEphemeralTcpInbound:
    Type: AWS::EC2::NetworkAclEntry
    Condition: IsEnableNetworkAcls
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 140
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1024
        To: 3388

  NetworkAclAllowHighEphemeralTcpInbound:
    Type: AWS::EC2::NetworkAclEntry
    Condition: IsEnableNetworkAcls
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 150
      Protocol: 6
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 3390
        To: 65535

  NetworkAclAllowAllOutbound:
    Type: AWS::EC2::NetworkAclEntry
    Condition: IsEnableNetworkAcls
    Properties:
      NetworkAclId:
        Ref: NetworkAcl
      RuleNumber: 100
      Protocol: -1
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0

  PublicSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: CreatePublicNetworkAcls
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      NetworkAclId:
        Ref: NetworkAcl

  PublicSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: CreatePublicNetworkAcls
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      NetworkAclId:
        Ref: NetworkAcl

  PublicSubnet3NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: CreatePublicNetworkAcls
    Properties:
      SubnetId:
        Ref: PublicSubnet3
      NetworkAclId:
        Ref: NetworkAcl

  PrivateSubnet1NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsEnableNetworkAcls
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      NetworkAclId:
        Ref: NetworkAcl

  PrivateSubnet2NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsEnableNetworkAcls
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      NetworkAclId:
        Ref: NetworkAcl

  PrivateSubnet3NetworkAclAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Condition: IsEnableNetworkAcls
    Properties:
      SubnetId:
        Ref: PrivateSubnet3
      NetworkAclId:
        Ref: NetworkAcl

  PublicRoute:
    Type: AWS::EC2::Route
    Condition: HasPublic
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway

  PubliceSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: HasPublic
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      RouteTableId:
        Ref: PublicRouteTable
        
  PubliceSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: HasPublic
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      RouteTableId:
        Ref: PublicRouteTable

  PubliceSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: HasPublic
    Properties:
      SubnetId:
        Ref: PublicSubnet3
      RouteTableId:
        Ref: PublicRouteTable
                    
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Condition: HasPublic
    Properties:
      VpcId: 
        Ref: Vpc
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${VpcLabel} Public Route"
        - Key: Application
          Value: FormKiQ

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc
      Tags:
        - Key: Name
          Value:
            Fn::Sub: "${VpcLabel} Private Route"
        - Key: Application
          Value: FormKiQ
            
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: PrivateSubnet1
      RouteTableId: 
        Ref: PrivateRouteTable
        
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: PrivateSubnet2
      RouteTableId: 
        Ref: PrivateRouteTable
        
  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
        Ref: PrivateSubnet3
      RouteTableId: 
        Ref: PrivateRouteTable

  S3GatewayEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: IsEnableVpcEndpoints
    Properties:
      VpcEndpointType: Gateway
      RouteTableIds:
        - Ref: PrivateRouteTable
      ServiceName:
        Fn::Sub: 'com.amazonaws.${AWS::Region}.s3'
      VpcId:
        Ref: Vpc

  DynamoDbGatewayEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: IsEnableVpcEndpoints
    Properties:
      VpcEndpointType: Gateway
      RouteTableIds:
        - Ref: PrivateRouteTable
      ServiceName:
        Fn::Sub: 'com.amazonaws.${AWS::Region}.dynamodb'
      VpcId:
        Ref: Vpc

  SnsInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: IsEnableVpcEndpoints
    Properties:
      VpcEndpointType: Interface
      ServiceName:
        Fn::Sub: 'com.amazonaws.${AWS::Region}.sns'
      VpcId:
        Ref: Vpc

  SsmInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: IsEnableVpcEndpoints
    Properties:
      VpcEndpointType: Interface
      ServiceName:
        Fn::Sub: 'com.amazonaws.${AWS::Region}.ssm'
      VpcId:
        Ref: Vpc

  ExecuteApiInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Condition: IsEnableVpcEndpoints
    Properties:
      PrivateDnsEnabled: true
      VpcEndpointType: Interface      
      ServiceName: 
        Fn::Sub: 'com.amazonaws.${AWS::Region}.execute-api'
      VpcId:
        Ref: Vpc

  VpcFlowLogsBucket:
    Condition: IsFlowLogToS3AndEnabled
    Type: AWS::S3::Bucket

  VpcFlowLogsBucketPolicy:
    Condition: IsFlowLogToS3AndEnabled
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: 
        Ref: VpcFlowLogsBucket
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Sid: "AWSFlowLogsWrite"
            Effect: Allow
            Principal:
              Service: vpc-flow-logs.amazonaws.com
            Action: "s3:PutObject"
            Resource:
              Fn::Sub: "${VpcFlowLogsBucket.Arn}/*"
            Condition:
              StringEquals:
                "s3:x-amz-acl": "bucket-owner-full-control"

  VpcFlowLogS3:
    Condition: IsFlowLogToS3AndEnabled
    Type: AWS::EC2::FlowLog
    Properties:
      LogDestination: !GetAtt VpcFlowLogsBucket.Arn
      LogDestinationType: !Ref VpcFlowLogsDestination
      ResourceId: !Ref Vpc
      ResourceType: VPC
      TrafficType: ALL
      Tags:
        - Key: Name
          Value: !Ref VpcLabel
        - Key: Application
          Value: FormKiQ

  VpcFlowLogCloudWatch:
    Condition: IsFlowLogToCloudWatchAndEnabled
    Type: AWS::EC2::FlowLog
    Properties:
      LogDestination: !GetAtt VpcFlowLogs.Arn
      LogDestinationType: !Ref VpcFlowLogsDestination
      ResourceId: !Ref Vpc
      ResourceType: VPC
      DeliverLogsPermissionArn: !GetAtt VpcFlowLogsCWRole.Arn
      TrafficType: ALL
      Tags:
        - Key: Name
          Value: !Ref VpcLabel
        - Key: Application
          Value: FormKiQ

  VpcFlowLogs:
    Condition: IsFlowLogToCloudWatchAndEnabled
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: !Ref FlowLogsRetentionInDays
      Tags:
        - Key: Application
          Value: "FormKiQ"

  VpcFlowLogsCWRole:
    Condition: IsFlowLogToCloudWatchAndEnabled
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: vpc-flow-logs.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: VPCFlowLogsPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:DescribeLogGroups
                  - logs:DescribeLogStreams
                  - logs:PutLogEvents
                Resource: "*"

  NatEip:
    Condition: CreateNatGateway
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
    DependsOn:
      - GatewayToInternet

  NatGateway:
    Condition: CreateNatGateway
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub "${VpcLabel} NatGateway"
        - Key: Application
          Value: FormKiQ

  PrivateDefaultRouteToNat:
    Condition: CreateNatGateway
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

Outputs:

  VpcFlowLogsBucket:
    Condition: IsFlowLogToS3AndEnabled
    Description: "Vpc Flow Logs S3 Bucket"
    Value:
      Ref: VpcFlowLogsBucket

  Vpc:
    Description: "VPC Id"
    Value:
      Ref: Vpc
    Export:
      Name: 
        Fn::Sub: "${AWS::StackName}-Vpc"
  VpcCidr:
    Description: "VPC Cidr"
    Value:
      Ref: VpcCidr
    Export:
      Name: 
        Fn::Sub: "${AWS::StackName}-VpcCidr"
  PublicSubnet1:
    Condition: HasPublic
    Description: "Public Subnet 1"
    Value:
      Ref: PublicSubnet1
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PublicSubnet1"
  PublicSubnet2:
    Condition: HasPublic
    Description: "Public Subnet 2"
    Value:
      Ref: PublicSubnet2
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PublicSubnet2"

  PublicSubnet3:
    Condition: HasPublic
    Description: "Public Subnet 3"
    Value:
      Ref: PublicSubnet3
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PublicSubnet3"
  PrivateSubnet1:
    Description: "Private Subnet 1"
    Value:
      Ref: PrivateSubnet1
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PrivateSubnet1"
  PrivateSubnet2:
    Description: "Private Subnet 2"
    Value:
      Ref: PrivateSubnet2
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PrivateSubnet2"
  PrivateSubnet3:
    Description: "Private Subnet 3"
    Value:
      Ref: PrivateSubnet3
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PrivateSubnet3"

  PublicSubnets:
    Condition: HasPublic
    Description: "VPC Public Subnets"
    Value: 
      Fn::Join:
        - ","
        - - Ref: PublicSubnet1
          - Ref: PublicSubnet2
          - Ref: PublicSubnet3
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PublicSubnets"
  PrivateSubnets:
    Description: "VPC Private Subnets"
    Value: 
      Fn::Join:
        - ","
        - - Ref: PrivateSubnet1
          - Ref: PrivateSubnet2
          - Ref: PrivateSubnet3
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PrivateSubnets"
  CloudMapNamespace:
    Condition: IsEnableVpcLinks
    Description: "Cloud Map Name Space"
    Value: 
      Ref: CloudMapNamespace
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-CloudMapNamespace"
  VpcLink:
    Condition: IsEnableVpcLinks
    Description: "ApiGatewayV2 VPC Link"
    Value: 
      Ref: VpcLink
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-VpcLink"
  VpcLinkSecurityGroup:
    Condition: IsEnableVpcLinks
    Description: "VPC Link Security Group"
    Value:
      Ref: VpcLinkSecurityGroup
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-VpcLinkSecurityGroup"

  NatGatewayId:
    Condition: CreateNatGateway
    Description: "NAT Gateway Id"
    Value: !Ref NatGateway

  NatEipAllocationId:
    Condition: CreateNatGateway
    Description: "NAT Gateway Elastic IP Allocation Id"
    Value: !GetAtt NatEip.AllocationId
